--- a/src/stylus/pages/home/step3.styl
+++ b/src/stylus/pages/home/step3.styl
@@ -30,4 +30,89 @@
       }
     }
   }
+  #conf_filtro {
+    clear: both;
+    position: relative;
+    // top: 340px;
+    width: 100%;
+    background: #FFFFFF;
+    min-height: 350px;
+    display: block;
+    margin: 0px 0px 50px;
+    #container_tessere {
+      display: block;
+      width: 100%;
+      height: auto;
+      text-align: left;
+      padding: 0;
+      background-color: #FFFFFF;
+      #tessere {
+        display: block;
+        width: 100%;
+        text-align: left;
+        left: 15px;
+        padding-top: 12px;
+        padding-left: 34px;
+        padding-bottom: 140px;
+        margin-top: 45px;
+        margin-bottom: 240px;
+        .tessera {
+          display: inline-block;
+          width: 110px;
+          height: 134px;
+          background-image: none;
+          background-repeat: no-repeat;
+          background-position: top center,top center;
+          background-size: contain,contain;
+          cursor: pointer;
+          margin-left: -4px;
+        }
+      }
+      #tessera_detail {
+        position: absolute;
+        width: 150px;
+        height: 220px;
+        background-color: #EDEDED;
+        box-shadow: 0px 0px 7px #666666;
+        z-index: 10;
+        display: none;
+        text-align: center;
+        #imgdetail {
+          display: block;
+          margin-left: 5px;
+          width: 137px;
+          height: 166px;
+          // margin-top: -15px;
+          background-position: center top;
+          background-size: 137px 166px;
+        }
+        #textdetail {
+          position: absolute;
+          top: 152px;
+          width: 100%;
+          height: 65px;
+          color: #404040;
+          text-align: center;
+          font-size: 13px;
+          box-sizing: border-box;
+          font-weight: 400;
+          line-height: 1em;
+          .titolodetail {
+            font-size: 12px;
+            line-height: 1em;
+            padding: 0px 5px;
+          }
+          .pricedetail {
+            display: none;
+            position: absolute;
+            bottom: 13px;
+            font-size: 14px;
+            font-weight: normal;
+            width: 100%;
+            text-align: center;
+          }
+        }
+      }
+    }
+  }
 }
