--- a/src/stylus/pages/home/step3.styl
+++ b/src/stylus/pages/home/step3.styl
@@ -26,6 +26,55 @@
         margin: 0 auto;
         .tessera_base_big_dark {
           background-image: url('../img/bracciale/tessera_base_big_dark.png');
+          .stella_incisione {
+            position: relative;
+            display: none;
+            margin: 0 auto;
+            top: -28px;
+            width: 19px;
+            height: 19px;
+            background: url('../img/bracciale/stella_incisione.png') no-repeat;
+            background-size: contain;
+            cursor: pointer;
+            z-index: 9999;
+          }
+          .tesserabracciale {
+            position: absolute;
+            display: block;
+            width: 110px;
+            height: 134px;
+            top: -23px;
+            left: -30px;
+            background-image: none;
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center top;
+          }
+          .handletessera {
+            position: absolute;
+            left: 2px;
+            top: 0px;
+            width: 46px;
+            height: 96px;
+            z-index: 99;
+          }
+        }
+        #tooltip_incisione {
+          position: absolute;
+          display: none;
+          width: 139px;
+          height: 49px;
+          background: url('../img/bracciale/tooltip_incisione.png') no-repeat;
+          background-size: contain;
+          font-size: 14px;
+          font-family: 'Montserrat',sans-serif;
+          text-align: center;
+          padding: 3px 0px;
+          box-sizing: border-box;
+          top: -40px;
+          line-height: 1em;
+          z-index: 99999;
+          cursor: pointer;
         }
       }
     }
@@ -82,7 +131,6 @@
           margin-left: 5px;
           width: 137px;
           height: 166px;
-          // margin-top: -15px;
           background-position: center top;
           background-size: 137px 166px;
         }
