--- a/src/stylus/pages/home/step3.styl
+++ b/src/stylus/pages/home/step3.styl
@@ -97,6 +97,21 @@ body {
           z-index: 99999;
           cursor: pointer;
         }
+        .locate {
+          height: 42px;
+          float: left;
+          position: relative;
+          top: 5px;
+          &.locate-start {
+            background: url('../img/locate1.png') no-repeat;
+            width: 34px;
+            right: 3px;
+          }
+          &.locate-end {
+            width: 18px;
+            background: url('../img/locate2.png') no-repeat;
+          }
+        }
       }
     }
   }
