--- a/src/stylus/pages/home/step3.styl
+++ b/src/stylus/pages/home/step3.styl
@@ -1,202 +1,133 @@
 body {
-  .tesseradrag {
-    display: inline-block;
-    width: 128px;
-    height: 155px;
-    background-image: none;
-    background-repeat: no-repeat;
-    background-position: top center,top center;
-    background-size: contain,contain;
-    cursor: pointer;
-  }
+    .tesseradrag {
+        display: inline-block;
+        width: 40px;
+        cursor: pointer;
+    }
+    > .tessera {
+        width: 55px;
+        height: 55px;
+        display: block;
+        overflow: hidden;
+        img {
+            width: 100%;
+        }
+    }
 }
 
 #step3 {
-  background-color: #FFFFFF;
-  min-height: 600px;
-  margin-bottom: 300px;
-  #fixed_bracciale {
-    position: relative;
-    height: 340px;
-    transform: translateZ(0);
-    z-index: 99;
-    #container_bracciale {
-      position: absolute;
-      display: block;
-      top: 198px;
-      width: 100%;
-      text-align: center;
-      padding: 0px 10px 10px;
-      margin-bottom: 50px;
-      background: url('../img/ombra.png') bottom 38px center no-repeat;
-      height: 131px;
-      #bracciale {
+    background-color: #FFFFFF;
+    min-height: 600px;
+    margin-bottom: 300px;
+    .tessera_base, .tessera_base_dark {
         position: relative;
         display: block;
-        margin: 0 auto;
-        width: 100%;
-        text-align: center;
-        height: 131px;
-        margin: 0 auto;
-        .stella_incisione {
-          position: relative;
-          display: none;
-          margin: 0 auto;
-          top: -28px;
-          width: 19px;
-          height: 19px;
-          background: url('../img/bracciale/stella_incisione.png') no-repeat;
-          background-size: contain;
-          cursor: pointer;
-          z-index: 9999;
-        }
-        .tesserabracciale {
-          position: absolute;
-          display: block;
-          width: 110px;
-          height: 134px;
-          top: -23px;
-          left: -30px;
-          background-image: none;
-          background-repeat: no-repeat;
-          background-size: contain;
-          background-position: center top;
-        }
-        .handletessera {
-          position: absolute;
-          left: 2px;
-          top: 0px;
-          width: 46px;
-          height: 96px;
-          z-index: 99;
-          cursor: pointer;
-        }
-        .tessera_base_link {
-          background-image: url('../img/bracciale/j/skin/tessera_base_link.png');
-        }
-        .tessera_base_big_dark {
-          background-image: url('../img/bracciale/j/tessera_base.png');
-          &.tessera_base_link_big {
-            // background-image: url('../img/bracciale/tessera_base_link_big.png');
-          }
-        }
-        #tooltip_incisione {
-          position: absolute;
-          display: none;
-          width: 139px;
-          height: 49px;
-          background: url('../img/bracciale/tooltip_incisione.png') no-repeat;
-          background-size: contain;
-          font-size: 14px;
-          font-family: 'Montserrat',sans-serif;
-          text-align: center;
-          padding: 3px 0px;
-          box-sizing: border-box;
-          top: -40px;
-          line-height: 1em;
-          z-index: 99999;
-          cursor: pointer;
-        }
-        .locate {
-          height: 42px;
-          float: left;
-          position: relative;
-          top: 5px;
-          &.locate-start {
-            background: url('../img/locate1.png') no-repeat;
-            width: 34px;
-            right: 3px;
-          }
-          &.locate-end {
-            width: 18px;
-            background: url('../img/locate2.png') no-repeat;
-          }
-        }
-      }
+        float: left;
+        width: 60px;
+        height: 109px;
+        margin-top: 0px;
+        background-image: url('../img/bracciale/j/skin/tessera_base.png');
+        background-repeat: no-repeat;
+        background-size: cover;
+        box-sizing: border-box;
+        overflow: visible !important;
     }
-  }
-  #conf_filtro {
-    clear: both;
-    position: relative;
-    // top: 340px;
-    width: 100%;
-    background: #FFFFFF;
-    min-height: 350px;
-    display: block;
-    margin: 0px 0px 50px;
-    #container_tessere {
-      display: block;
-      width: 100%;
-      height: auto;
-      text-align: left;
-      padding: 0;
-      background-color: #FFFFFF;
-      #tessere {
-        display: block;
-        width: 100%;
-        text-align: left;
-        left: 15px;
-        padding-top: 12px;
-        padding-left: 34px;
-        padding-bottom: 140px;
-        margin-top: 45px;
-        margin-bottom: 240px;
-        .tessera {
-          display: inline-block;
-          width: 110px;
-          height: 134px;
-          background-image: none;
-          background-repeat: no-repeat;
-          background-position: top center,top center;
-          background-size: contain,contain;
-          cursor: pointer;
-          margin-left: -4px;
-        }
-      }
-      #tessera_detail {
-        position: absolute;
-        width: 150px;
-        height: 220px;
-        background-color: #EDEDED;
-        box-shadow: 0px 0px 7px #666666;
-        z-index: 10;
-        display: none;
-        text-align: center;
-        #imgdetail {
-          display: block;
-          margin-left: 5px;
-          width: 137px;
-          height: 166px;
-          background-position: center top;
-          background-size: 137px 166px;
-        }
-        #textdetail {
-          position: absolute;
-          top: 152px;
-          width: 100%;
-          height: 65px;
-          color: #404040;
-          text-align: center;
-          font-size: 13px;
-          box-sizing: border-box;
-          font-weight: 400;
-          line-height: 1em;
-          .titolodetail {
-            font-size: 12px;
-            line-height: 1em;
-            padding: 0px 5px;
-          }
-          .pricedetail {
-            display: none;
-            position: absolute;
-            bottom: 13px;
-            font-size: 14px;
-            font-weight: normal;
+    #fixed_bracciale {
+        position: relative;
+        z-index: 99;
+        margin-top: 200px;
+        #container_bracciale {
+            // position: absolute;
+            font-size: 0;
+            display: inline-block;
+            // top: 198px;
             width: 100%;
             text-align: center;
-          }
+            // padding: 0px 10px 10px;
+            margin-bottom: 50px;
+            background: url('../img/ombra.png') bottom 38px center no-repeat;
+            height: 131px;
+            .locate {
+                height: 42px;
+                position: relative;
+                top: 9px;
+                display: inline-block;
+                &.locate-start {
+                    background: url('../img/locate1.png') no-repeat;
+                    width: 34px;
+                }
+                &.locate-end {
+                    width: 18px;
+                    background: url('../img/locate2.png') no-repeat;
+                }
+            }
+            #bracciale {
+                position: relative;
+                display: inline-block;
+                vertical-align: top;
+                text-align: center;
+                height: 131px;
+                .tesserabracciale {
+                    position: absolute;
+                    display: block;
+                    width: 50px;
+                    height: 50px;
+                    top: 4px;
+                    left: -30px;
+                    background-image: none;
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                    background-position: center top;
+                }
+                .handletessera {
+                    position: absolute;
+                    left: 2px;
+                    top: 0px;
+                    width: 60px;
+                    height: 109px;
+                    z-index: 99;
+                    cursor: pointer;
+                }
+            }
         }
-      }
     }
-  }
+    #conf_filtro {
+        clear: both;
+        position: relative;
+        // top: 340px;
+        width: 100%;
+        background: #FFFFFF;
+        min-height: 350px;
+        display: block;
+        margin: 0px 0px 50px;
+        #container_tessere {
+            display: block;
+            width: 100%;
+            height: auto;
+            text-align: left;
+            padding: 0;
+            background-color: #FFFFFF;
+            #tessere {
+                display: block;
+                width: 100%;
+                text-align: left;
+                left: 15px;
+                padding-top: 12px;
+                padding-left: 34px;
+                padding-bottom: 140px;
+                margin-top: 45px;
+                margin-bottom: 240px;
+                font-size: 0;
+                .tessera {
+                    display: inline-block;
+                    width: 55px;
+                    cursor: pointer;
+                    margin: 0 4px;
+                    img {
+                        width: 100%;
+                    }
+                }
+            }
+        }
+    }
 }
