add name and price to product

--- a/src/stylus/common/index.styl
+++ b/src/stylus/common/index.styl
@@ -1,13 +1,17 @@
 body {
-  position: relative;
-  background-color: #FFF;
-  .wrapper {
-    .page {
-      .content-wrapper {
-        clear: both;
-        overflow: hidden;
-        position: relative;
-      }
+    position: relative;
+    background-color: #FFF;
+    .wrapper {
+        .page {
+            .content-wrapper {
+                clear: both;
+                overflow: hidden;
+                position: relative;
+            }
+        }
     }
-  }
+}
+
+*, ::after, ::before {
+    box-sizing: border-box;
 }
