--- a/src/stylus/common/index.styl
+++ b/src/stylus/common/index.styl
@@ -5,7 +5,7 @@ body {
         .page {
             .content-wrapper {
                 clear: both;
-                overflow: hidden;
+                // overflow: hidden;
                 position: relative;
             }
         }
