--- a/src/stylus/common/index.styl
+++ b/src/stylus/common/index.styl
@@ -1,7 +1,7 @@
 body {
     position: relative;
     background-color: #FFF;
-    .wrapper {
+    .wrapper-braslet {
         .page {
             .content-wrapper {
                 clear: both;
